Add a version selection component to the documentation
closes #2064

This adds a small `select` element that can be used to navigate
between the release and master docs. The select appears in the
navigation pane to the right of the "Helix" header. Your path is
preserved while navigating, so if you are on the keybindings page
on master and set the select to 22.03, you jump to the keybindings
page on 22.03.

--- a/book/theme/index.hbs
+++ b/book/theme/index.hbs
@@ -105,6 +105,12 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
+                <form id="version-select" autocomplete="off">
+                    <select>
+                        <option value="https://docs.helix-editor.com">22.03</option>
+                        <option value="https://docs.helix-editor.com/master" selected>master</option>
+                    </select>
+                </form>
                 {{#toc}}{{/toc}}
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
